--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /POO II/Aula12  - Arthur C/Aula-12/dist/
 /POO II/Aula14ArthurC/build/
 /POO II/Aula14ArthurC/nbproject/private/
+/POO II/Aula15 - 14p2 - Arthur C/Aula15/build/
